--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ select {
     cursor: pointer;
     padding: 8px;
     border: none;
+    border-radius: 0;
+    padding: 8px;
     outline: none;
 }
 
