--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ main {
 }
 .week {
     display: flex;
+    align-items: center;
 }
 .week-nr {
     width: 80px;
@@ -92,6 +93,8 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 0;
+    padding: 2px;
 }
 .day p {
     color: black;
