--- a/style.css
+++ b/style.css
@@ -92,12 +92,11 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 0;
-    padding: 2px;
+    justify-content: center; 
 }
 .day p {
     color: black;
+    height: 6px;
 }
 .day.success {
     background-color: rgb(39, 255, 39);
